# fedel

./: Cargo.toml  build.rs
src/: hotreload.js  main.rs  ssr.rs
src/components/: admin_layout.rs
src/routes/: mod.rs
src/routes/admin/: home.rs
