[package]
name = "fedel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.17", features = ["ws", "headers"] }
axum-macros = "0.2.3"
serde = "1.0.147"
tokio = { version = "1.21.2", features = ["full"] }
yew = { git = "https://github.com/yewstack/yew", features = ["ssr"] }
